--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ section {
 }
 
 .mainborder {
-    border:  2px solid black;
+    border:  2px solid white;
     border-radius: 25px;
     box-shadow: 10px 10px 5px grey;
 }
@@ -103,10 +103,11 @@ main {
     border-radius: 25px;
 }
 
+
 .miniborder {
-    border:  2px solid black;
+    border:  10px solid white;
     border-radius: 25px;
-    box-shadow: inset 10px 10px 5px grey;
+    box-shadow: 10px 10px 5px grey;
 }
 
 .fit {
