--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --gradient: linear-gradient(to bottom right, lightblue, white);
+}
+
 * {
     font-family: Helvetica, Arial, sans-serif;
     box-sizing: border-box;
@@ -10,7 +14,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    background-image: linear-gradient(to bottom right, lightblue, white);
+    background-image: var(--gradient);
     height: 50px;
     border-bottom: 2px solid white;
 }
@@ -93,7 +97,7 @@ section {
     flex-direction: column;
     justify-content: center;
     padding: 0 20px;
-    background-image: linear-gradient(to bottom right, lightblue, white);
+    background-image: var(--gradient);
     margin-left: 0;
     margin-top: 20px;
 }
@@ -109,7 +113,7 @@ main {
     height: 400px;
     margin: 20px;
     flex: 3 0 400px;
-    background-image: linear-gradient(to bottom right, lightblue, white);
+    background-image: var(--gradient);
     border-radius: 25px;
 }
 
@@ -127,7 +131,7 @@ main {
 
 footer {
     height: 50px;
-    background-image: linear-gradient(to bottom right, lightblue, white);
+    background-image: var(--gradient);
     display: flex;
     justify-content: center;
     align-content: center;
@@ -146,12 +150,6 @@ footer ul li {
     display: inline-block;
     margin: 0 35px;
 }  
-
-/* Websites */
-
-#chelseafansite {
-    background-image: url(https://syackzan.github.io/MP---Landing-Page-/);
-}
 
 .sizingchel {
     width: 100px;
