--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,295 +1,159 @@
-:root {
-    --gradient: linear-gradient(to bottom right, lightblue, white);
-}
-
 * {
     font-family: Helvetica, Arial, sans-serif;
     box-sizing: border-box;
 }
 
-body {
-    background-color: rgb(231, 225, 225);
-    width: 100%
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    background-image: var(--gradient);
-    height: 50px;
-    border-bottom: 2px solid white;
-}
-
-/* Setting Scotty Yackzan Elements */
-h1 {
-    display: flex;
-    margin-left: 35px;
-    align-items: center;
-    font-size: 40px;
-    letter-spacing: 3px;
-}
-
-/* Setting Navigation Panel Display */
-nav {
-    display: flex;
-    align-items: center;
-    color: black;
-}
-
-/* Setting Links Color */
-a {
-    color: blue;
-}
-
-h5 {
-    text-align: center;
-}
-
-header ul {
-    display: flex;
-    list-style-type: none;
-    margin-right: 0px;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    line-height: 1.5;
-}
-
-header ul li {
-    display: inline-block;
-    margin: 0 35px;
-    align-content: center;
-}
-
-
-/*Setting Text Box Elements */
-article {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 50px;
-    margin-top: 5px;
-    min-height: 500px;
-    max-width: 100%;
-}
-
-/* Setting h2, h3 general Elements */
-.info-header {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    border-color: black;
-    margin-top: 35px;
-    font-size: 30px;
-    letter-spacing: 3px;
-}
-
-/* Setting Image Container Elements */
-#image-container {
-    display: flex; 
-    height: auto;
-    width: 25%;
-    margin-left: 5px;
-    margin-top: 20px;
-}
-
-.popups {
-    width: 200px;
-    right: 1%;
-    bottom: 50%;
-    background-color: lightblue;
-    border: 2px dashed white;
-    text-align: center;
-    color: black;
-    padding: 4px; 
-    border-bottom-left-radius: 25px;
-    border-top-left-radius: 25px; 
-    border-right: 2px solid white;  
-}
-
-/* Styling the Lists related to the About Me Text Box */
-#ulstyle {
-    list-style-type: square;
-    padding-left: 30px;
-}
-
-/* Setting a Specific Margin for the Image */
-#margin {
-    margin-top: 20px;
-}
-
-/* Setting Margin against Edge of Web Page */
-section {
-    margin-right: 50px;
-    margin-left: 50px;
-}
-
-/* Class that sets the Main Border for article Section */
-.mainborder {
-    border:  2px solid white;
-    border-radius: 25px;
+/* Universal Styling For Main Border */
+.mainBorder {
+    border: 4px solid black;
+    border-radius: 15px;
     box-shadow: 10px 10px 5px grey;
 }
 
-/* Set Text Element within About Me */
-.text {
+/* Universtal Styling To Flex and Center Content in a Div */
+.order {
     display: flex;
-    flex-direction: column;
-    max-width: 65%;
-    height: auto;
     justify-content: center;
-    padding: 0 20px;
-    background-image: var(--gradient);
-    margin-left: 0;
-    margin-top: 20px;
-    line-height: 1.5;
 }
 
-/* Sets Main Element (Highlighting Portolio) */
-main {
-   margin: 25px auto;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
+/* Styling Nav Bar */
+.navbar {
+    padding: 0px 30px;
+    background-color: rgb(114, 103, 103);
+    color: black;
+    border-bottom: 2px solid black;
+    min-height: 60px;
+    height: fit-content;
+    align-items: end;
 }
 
-/* Sets Box Elements for Portfolio Websites/Programs */
-.linkbox {
+/* Styling Header Inside Navbar */
+h1 {
+    margin: 0px
+}
+
+/* Styling List inside Navbar */
+.liMargin {
+    color: black;
+    margin: 0px 5px
+}
+
+/* Styling About Me and Portfolio Headers */
+.header1 {
     display: flex;
-    height: 400px;
+    justify-content: space-between;
     margin: 20px;
-    flex: 3 0 400px;
-    background-image: var(--gradient);
-    border-radius: 25px;
+    border-bottom: 2px solid black;
+    padding: 0px 10px;
+}
+
+/* Styling About Me Div */
+.aboutMe {
+    margin: 20px;
+}
+
+/* Styling About Me Content */
+.meContent {
+    background-color: lightgray;
+    color: black;
+    height: fit-content;
+    padding: 10px;
+    text-align: justify;
+    font-size: 16px
+}
+
+/* Image Fix */
+.img1 {
+    height: 15%;
+    width: 15%;
+    float: right;
+    margin-left: 20px
+}
+
+/* Styling Headers showcasing Portfolio */
+.header2 {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    padding: 0px 10px;
+}
+
+/* Formatting the Section Element Holding Individual Projects Link */
+.formatSection {
+    height: 250px;
+    width: 100%;
     position: relative;
 }
 
-
-/* Sets a Border for Portfolio Boxes */
-.miniborder {
-    border:  10px solid white;
-    border-radius: 25px;
-    box-shadow: 10px 10px 5px grey;
+/* Formatting the Header Element For Project Section */
+.formatHeader {
+    position: relative;
+    background-color: gray;
+    color: black;
+    font-size: 22px;
+    height: fit-content;
+    width: fit-content;
+    padding: 5px;
+    border: 2px solid black;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+    z-index: 1;
+    top: -100px;
+    right: 2px;
 }
 
-.mini-text {
-   
-    display: flex;
-    position: absolute;
-    align-items: center;
-    top: 50%;
-    width: 45%;
-    height: 20%;
-    background-color: lightblue;
-    color: white;
-    border:  2px solid white;
-    border-left-width: 10px;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    font-size: 30px;
-    opacity: 97%;
-    padding-left: 12px;
-    
-}
-
-/* Setting Portfolio Images to size 100% of .linkbox elements */
-.fit {
-    height: 100%;
+/* Formatting the Image Element For Project Section */
+.formatImage {
+    position: relative;
     width: 100%;
+    height: 100%;
+    z-index: 0;
+    border-radius: 10px;
 }
 
-/* Setting Footer Elements */
-footer {
-    display: flex;
-    height: 50px;
-    background-image: var(--gradient);
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    margin-top: 25px;
+/* Formatting the Text Element For Project Section */
+.formatHidden {
+    position: relative;
+    background-color: gray;
+    color: black;
+    font-size: 16px;
+    border: 4px solid black;
+    border-radius: 5px;
+    height: fit-content;
+    width: 200px;
+    padding: 3px;
+    top: -320px;
+    left: 0px;
+    z-index: 1;
+    display: none;
 }
 
+/* Styling Footer */
 .footer {
     display: flex;
-    align-items: center;
+    justify-content: space-around;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background-color: rgb(114, 103, 103);;
+    border-top: 2px solid black;
+    margin-top: 10px
 }
 
-footer ul {
-    list-style-type: none;
-    display: flex;
-    list-style-type: none;
-    margin-right: 0px;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    line-height: 1.5;
+@media only screen and (max-width: 720px) {
+    .img1 {
+        height: 40%;
+        width: 40%
+    }
 }
 
-footer ul li {
-    display: inline-block;
-    margin: 0 35px;
-}  
-
-.sizingchel {
-    width: 100px;
-}
-
-/* Psuedo Classes */
-
-img:hover {
+/* Making the website more dynamic with a hover feature */
+.formatImage:hover {
     background-color: rgb(231, 225, 225);;
     opacity: .5;
 }
 
-.buttonclose:hover {
-    background-color: lightblue;
+/* Display About Info when Hovering over a Project */
+section:hover #box1 {
+    display: block;
 }
-
-a:hover {
-    color: purple;
-    font-weight: bold;
-    font-size: 16px;
-}
-
-/* Buttons */
-#ab-button,
-#p-button {
-    height: 1em;
-    width: 1em;
-    background-color: grey;
-}
-
-#ab-button:hover, 
-#p-button:hover {
-    background-color: lightblue;
-    opacity: 50%;
-    cursor: pointer;
-}
-
-
-/* Media Quearies */
-
-@media screen and (max-width: 770px){
-    header {
-        height: 80px;
-    }
-}
-
-@media screen and (max-width: 441px){
-    header{
-        height: 100px;
-    }
-}
-
-@media screen and (max-width: 441px){
-    .linkbox{
-        height: 250px;
-        flex: 3 0 250px;
-    }
-
-    .mini-text {
-        font-size: 14px;
-    }
-}
-
