--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,16 @@
     box-sizing: border-box;
 }
 
+body {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 93%);
+}
+
 /* Universal Styling For Main Border */
 .mainBorder {
     border: 4px solid black;
     border-radius: 15px;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 10px 10px 5px black;
 }
 
 /* Universtal Styling To Flex and Center Content in a Div */
@@ -19,9 +24,9 @@
 /* Styling Nav Bar */
 .navbar {
     padding: 0px 30px;
-    background-color: rgb(114, 103, 103);
+    background-color: rgb(114, 103, 103);;
     color: black;
-    border-bottom: 2px solid black;
+    border-bottom: 3px solid black;
     min-height: 60px;
     height: fit-content;
     align-items: end;
@@ -135,7 +140,7 @@ h1 {
     height: 50px;
     line-height: 50px;
     text-align: center;
-    background-color: rgb(114, 103, 103);;
+    background-color: rgb(114, 103, 103);
     border-top: 2px solid black;
     margin-top: 10px
 }
