added a query to size of full stack programs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,10 +145,21 @@ h1 {
     margin-top: 10px
 }
 
+/* Make the Full stack applications taller on larger screens */
+.bigger {
+    height: 500px;
+}
+
 @media only screen and (max-width: 720px) {
     .img1 {
         height: 40%;
         width: 40%
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .bigger {
+        height: 300px
     }
 }
 
